Archive2/c3/652d3a8a4501db/output
main.cpp: In function 'void testConstantExpressions()':
main.cpp:14:28: error: '(1.0e+0 / 5.5000000000000004e-1)' is not a constant expression
   constexpr double w1 = x1 / (y1 / z1);
                            ^
main.cpp:20:34: error: '(4.0e+0 / 2.2999999999999998e+0)' is not a constant expression
   constexpr double w2 = x2 / (y2 / z2);
                                  ^
